--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,29 +30,12 @@ jobs:
             ${{ runner.os }}-composer-
 
       - name: Install Composer Dependencies
-        run: composer install --prefer-dist --no-dev --no-progress
-
-      - name: Create .env file for production
-        run: |
-          touch .env
-          printf '%s' "${{ secrets.ENV_VOTING_PRODUCTION }}" > .env
-
-      - name: Encrypt env file
-        run: php artisan env:encrypt
-
-      - name: Clear Cache and Optimize Laravel
-        run: php artisan optimize:clear
-
-      - name: Generate Laravel Key
-        run: php artisan key:generate
+        run: composer install --optimize-autoloader --no-dev --no-progress --prefer-dist
 
       - name: Set appropriate permissions
         run: |
           chmod -R 755 storage
           chmod -R 755 bootstrap/cache
-
-      - name: Generate storage link
-        run: php artisan storage:link
 
       - name: Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
@@ -64,12 +47,11 @@ jobs:
           port: ${{ secrets.FTP_VOTING_PORT }}
           server-dir: /
           exclude: |
-            .git**
-            .git/**
-            .git*/**
             **/.git*
-            **/.git**
             **/.git*/**
+            **/node_modules/**
+            **/tests/**
             .github
+            phpunit.xml
             LICENSE
             README.md
